--- a/index.html
+++ b/index.html
@@ -21,13 +21,13 @@
     <div class="content">
       <div class="header">
         <section class="name">APOORV KUMAR KAPSIME</section>
-        <section class="position">Intern</section>
+        <section class="position">Front End Web Developer</section>
         <section class="bio">
           Detail-oriented Front End Web Development student with a comprehensive
           understanding of HTML, CSS and and Javascript . Seeking to use coding
           and development skills during the internship Program.
         </section>
-        <img class="profile" src="Images/profile.png" alt="" />
+        <img class="profile" src="Images/profile1.png" alt="" />
       </div>
       <div class="links">
         <section class="icons">
