--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
     <div class="heading">
       <nav class="nav">
         <ul>
-          <li>Home</li>
-          <li>Contact us</li>
-          <li>Resume</li>
+          <li><a href="#">Home</a></li>
+          <li><a href="/Contact us/index.html">Contact us</a></li>
+          <li><a href="index.html" class="activen">Resume</a></li>
         </ul>
       </nav>
     </div>
