--- a/Contact us/index.html
+++ b/Contact us/index.html
@@ -20,9 +20,17 @@
           <h2>Apoorv Kumar Kapsime</h2>
           <p>I am a AKTU student and i like to learn coding</p>
           <div class="links">
-            <a href="#"><i class="fa-brands fa-github"></i></a>
-            <a href="#"><i class="fa-brands fa-instagram"></i></a>
-            <a href="#"><i class="fa-brands fa-linkedin"></i></a>
+            <a href="https://github.com/apoorvkapsime"
+              ><i class="fa-brands fa-github"></i
+            ></a>
+            <a href="https://www.instagram.com/apoorvkapsime/"
+              ><i class="fa-brands fa-instagram"></i
+            ></a>
+            <a
+              href="https://www.linkedin.com/in/apoorv-kapsime-2248b5157/
+            "
+              ><i class="fa-brands fa-linkedin"></i
+            ></a>
           </div>
           <a href="#" class="btn">Message me</a>
         </div>
