added line effect

--- a/index.html
+++ b/index.html
@@ -52,22 +52,24 @@
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0 letter">
               <li class="nav-item">
-                <a class="nav-link" aria-current="page" href="#">Home</a>
+                <a class="nav-link pb-0" aria-current="page" href="#">Home</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="#"
+                <a class="nav-link active pb-0" aria-current="page" href="#"
                   >Resume</a
                 >
               </li>
               <li class="nav-item">
-                <a class="nav-link" aria-current="page" href="#">Projects</a>
+                <a class="nav-link pb-0" aria-current="page" href="#"
+                  >Projects</a
+                >
               </li>
               <li class="nav-item">
                 <a
-                  class="nav-link"
+                  class="nav-link pb-0"
                   aria-current="page"
                   href="Contact us/index.html"
-                  >Contact us</a
+                  >About me</a
                 >
               </li>
             </ul>
