--- a/Contact us/index.html
+++ b/Contact us/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Blog</title>
-    <link rel="stylesheet" href="/Contact us/index.css" />
+    <link rel="stylesheet" href="./Contact us/index.css" />
     <script
       src="https://kit.fontawesome.com/0aa96c5c02.js"
       crossorigin="anonymous"
@@ -54,6 +54,6 @@
         </ul>
       </div>
     </div>
-    <script src="/Contact us/vanilla-tilt.js"></script>
+    <script src="./Contact us/vanilla-tilt.js"></script>
   </body>
 </html>
