fixed file not loading bug

--- a/about.html
+++ b/about.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Blog</title>
-    <link rel="stylesheet" href="Portfolio/Contact us/index.css" />
+    <link rel="stylesheet" href="about.css" />
     <script
       src="https://kit.fontawesome.com/0aa96c5c02.js"
       crossorigin="anonymous"
@@ -16,7 +16,7 @@
       <!-- <h1>Animation CSS</h1> -->
       <div class="content">
         <div class="card" data-tilt>
-          <img src="Portfolio/Contact us/images/logo.png" alt="" />
+          <img src="Images/logo.png" alt="" />
           <h2>Apoorv Kumar Kapsime</h2>
           <p>I am a AKTU student and i like to learn coding</p>
           <div class="links">
@@ -54,6 +54,6 @@
         </ul>
       </div>
     </div>
-    <script src="Portfolio/Contact us/vanilla-tilt.js"></script>
+    <script src="vanilla-tilt.js"></script>
   </body>
 </html>
