--- a/index.html
+++ b/index.html
@@ -65,10 +65,7 @@
                 >
               </li>
               <li class="nav-item">
-                <a
-                  class="nav-link pb-0"
-                  aria-current="page"
-                  href="Contact us/index.html"
+                <a class="nav-link pb-0" aria-current="page" href="about.html"
                   >About me</a
                 >
               </li>
